# linkml-owl

./: .gitignore  404.html  EXAMPLES.md  Makefile  Pipfile  README.md  SPECIFICATION.md  index.html  mkdocs.yml  pyproject.toml  search.html  setup.cfg  sitemap.xml
.github/workflows/: main.yaml
basics/: index.html
comparison/: index.html
docgen-templates/: class.md.jinja2  common_metadata.md.jinja2  index.md.jinja2  slot.md.jinja2
docs/: autofilling.md  basics.md  comparison.md  current-uses.md  examples.md  further-reading.md  index.md  mappings.md  specification.md  templates.md  tips.md  usage.md
docs/tutorial/: index.md  pizza01-toppings-data.yaml  pizza01-toppings-model.yaml  pizza01.md  pizza01.ofn  pizza01.owl  pizza02-hasToppings-model.yaml  pizza02.md  pizza02.ofn  pizza02.owl  pizza03-countries-model.yaml  pizza03.md  pizza03.ofn  pizza04-refactored-model.yaml  pizza04.md  pizza04.ofn  pizza05.md  pizza06.md  pizza07.md  pizza08.md  pizza09.md
example-schema/: index.html
example-schema/ActivationStateEnum/: index.html
example-schema/AnonPartOf/: index.html
example-schema/Anonymous/: index.html
example-schema/Boolean/: index.html
example-schema/Child/: index.html
example-schema/ChildOfAnon/: index.html
example-schema/ChildOfUnion/: index.html
example-schema/ClassTemplateExample1/: index.html
example-schema/ClassTemplateExample2/: index.html
example-schema/CollectionOfParts/: index.html
example-schema/CollectionOfPartsWithCounts/: index.html
example-schema/Date/: index.html
example-schema/Datetime/: index.html
example-schema/Decimal/: index.html
example-schema/DefinedCollectionOfParts/: index.html
example-schema/DefinitionWithAxiomAnnotation/: index.html
example-schema/DefinitionWithIRIAxiomAnnotation/: index.html
example-schema/DirectEquivalent/: index.html
example-schema/DisjointUnion/: index.html
example-schema/Double/: index.html
example-schema/EquivGenusAndPartOf/: index.html
example-schema/EquivGenusAndPartOfWithAxiomAnnotation/: index.html
example-schema/EquivIntersection/: index.html
example-schema/EquivIntersectionWithAxiomAnnotation/: index.html
example-schema/EquivUnion/: index.html
example-schema/Float/: index.html
example-schema/Integer/: index.html
example-schema/NamedThing/: index.html
example-schema/NamedThingWithMatches/: index.html
example-schema/NamedThingWithMatchesAsLiterals/: index.html
example-schema/Ncname/: index.html
example-schema/Nodeidentifier/: index.html
example-schema/Objectidentifier/: index.html
example-schema/OwlTest/: index.html
example-schema/Part/: index.html
example-schema/PartOnly/: index.html
example-schema/PartWithCounts/: index.html
example-schema/Phenotype/: index.html
example-schema/SizeTriad/: index.html
example-schema/String/: index.html
example-schema/Thing/: index.html
example-schema/Time/: index.html
example-schema/Uri/: index.html
example-schema/Uriorcurie/: index.html
example-schema/abnormal/: index.html
example-schema/axiom_source/: index.html
example-schema/count/: index.html
example-schema/decreased/: index.html
example-schema/definition/: index.html
example-schema/id/: index.html
examples/: index.html
further-reading/: index.html
linkml_owl/: __init__.py  owl_dumper.py
mappings/: index.html
search/: search_index.json
specification/: index.html
templates/: index.html
tests/: __init__.py  test_allen.py  test_create.py  test_from_dosdp.py  test_from_tsv.py  test_generate_from_ofn.py  test_loader_wrapper.py  test_owl_dumper.py  test_pizza.py  test_ro_metamodel.py
tips/: index.html
tutorial/: Makefile  index.html  pizza01-toppings-model.yaml  pizza02-hasToppings-data.yaml  pizza03-countries-data.yaml  pizza03-model.yaml  pizza03.owl  pizza04-refactored-data.yaml  pizza04.owl
usage/: index.html
(+87 files in other folders)
