[tool.poetry]
name = "linkml_owl"
version = "0.1.0"
description = "OWL mappings for Linked Open Data Modeling Language"
authors = ["Chris Mungall <cjmungall@lbl.gov>"]

readme = "README.md"

homepage = "https://github.com/linkml/linkml-owl"
repository = "https://github.com/linkml/linkml-owl"
documentation = "https://github.com/linkml/linkml-owl"

keywords = ["linkml", "owl"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.scripts]
linkml-data2owl = "linkml_owl.owl_dumper:cli"

[tool.poetry.dependencies]
python = "^3.7.1"

click = "*"
funowl = "^0.1.10"
Jinja2 = "^3.0.3"
linkml-runtime = "^1.1.19"
linkml = "^1.1.16"
rdflib = "^5.0.0"   # rdflib^6.0.0 is not supported by funowl

[tool.poetry.dev-dependencies]
importlib-metadata = {version = "^1.0", python = "<3.8"}
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
