[tool.poetry]
name = "linkml_owl"
version = "0.0.0"
description = "OWL mappings for Linked Open Data Modeling Language"
authors = ["Chris Mungall <cjmungall@lbl.gov>"]

readme = "README.md"

homepage = "https://github.com/linkml/linkml-owl"
repository = "https://github.com/linkml/linkml-owl"
documentation = "https://github.com/linkml/linkml-owl"

keywords = ["linkml", "owl"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.poetry.scripts]
linkml-data2owl = "linkml_owl.dumpers.owl_dumper:cli"

[tool.poetry.dependencies]
python = "^3.8"

click = "*"
funowl = "0.1.12"
Jinja2 = "^3.0.3"
linkml = "^1.3.0"
linkml-runtime = "^1.3.4"

[tool.poetry.dev-dependencies]
tox = "^3.24.5"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
mkdocs = "^1.2.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
